@@ -24,4 +24,15 @@ struct Rule rules[] = {
     {  NULL,   NULL,      -1,         -1,      -1  },
 };
 
+/* When multiple monitors are connected to your workstation, you might
+ * want to select different initial workspaces on each monitor. For
+ * example, when 3 monitors are connected, select workspace 20 on
+ * monitor 0, workspace 2 on monitor 1, and workspace 12 on monitor 3.
+ * If none of these configurations matches, use default_workspace. */
+int initial_workspaces[] = {
+    2,  12, 2,      /* 2 monitors connected */
+    3,  20, 2, 12,  /* 3 monitors connected */
+};
+int default_workspace = 1;
+
 #endif /* _WM_CONFIG_H */
